fixed issue with header background img when throttling screen on mobile

--- a/code/style.css
+++ b/code/style.css
@@ -147,9 +147,9 @@ a {
 }
 
 .header-background-img {
-  height: 100%;
+  min-width: 100%;
   max-height: 520px;
-  object-fit: cover;
+  /* object-fit:cover; */
   background-repeat:repeat-x;
   position: fixed;
   z-index: -1;
@@ -357,7 +357,6 @@ a {
 
 .footer p {
   line-height: 25px !important;
-  font-weight: 300 !important;
 }
 
 
@@ -380,8 +379,8 @@ a {
   }
 
   .header-background-img {
-    width: 100%;
-    min-height: 670px;
+    object-fit: cover;
+    max-height: 670px;
   }
 
   .overlay {
